[gd_scene load_steps=13 format=3 uid="uid://0bhe4t211pey"]

[ext_resource type="Script" uid="uid://d0qnxbbps1sxi" path="res://Scripts/slime.gd" id="1_aiwxb"]
[ext_resource type="Texture2D" uid="uid://dsycexheagxjv" path="res://Assets/sprites/slime_green.png" id="1_swwnm"]
[ext_resource type="AudioStream" uid="uid://dt53aelssoms8" path="res://Assets/sounds/explosion.wav" id="3_aiwxb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_swwnm"]
atlas = ExtResource("1_swwnm")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_paq7w"]
atlas = ExtResource("1_swwnm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("1_swwnm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("1_swwnm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("1_swwnm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_e388w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swwnm")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swwnm"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiwxb"]
size = Vector2(10, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_swwnm"]
radius = 9.0

[node name="Slime" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_aiwxb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_e388w")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_swwnm")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(10, 0)
collision_mask = 8

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-10, 0)
collision_mask = 8

[node name="BounceArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_aiwxb")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_swwnm")

[node name="AttackTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_aiwxb")

[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
